# memesearch

./: .env.example  .gitignore  Dockerfile  bot-cmd.sh  flake.nix  megapython  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 016b96671a25_inline_usage.py  1fb8a1776a28_.py  350a6eae3416_.py  3a563e5b40e4_comment.py  4541416a7914_image_phash_index.py  47a5ce1d17bb_add_embedding_vector_to_image.py  5a1b1723ac70_.py  60b429f5f34f_.py  b14146e66dd7_add_embedding_vector_to_image.py  b35c2798be77_inline_usage.py  b5ea3879404a_image_tg_ref.py  bb83ae41a70f_.py  c5cefe557518_.py  ca43c9d79693_init.py  ed9a97d65548_.py  f69b556ba28b_.py
app/: __init__.py  __main__.py  bot.py  bot_client.py  config.py  db.py  userbot_client.py  utils.py  web.py
app/models/: __init__.py  base.py  channel.py  image.py  image_usage.py  sticker.py
app/scripts/: download_model.py  import_tg_channel.py
artifacts/: architecture.md  meme_sources.md  proposal.md  readme.md
artifacts/ocr/: gen_res.py  index.md  ocr_search_test_data.py  pyproject.toml  tester.py
artifacts/ocr/samples/1/: 1.yml
artifacts/ocr/samples/10/: 10.yml
artifacts/ocr/samples/2/: 2.yml
artifacts/ocr/samples/3/: 3.yml
artifacts/ocr/samples/4/: 4.yml
artifacts/ocr/samples/5/: 5.yml
artifacts/ocr/samples/6/: 6.yml
artifacts/ocr/samples/7/: 7.yml
artifacts/ocr/samples/8/: 8.yml
artifacts/ocr/samples/9/: 9.yml
artifacts/postgres_search/: data.json  gin.json  gist.json  main.py  models.py  ocr_search_test_data.py  pyproject.toml
