[project]
name = "memesearch"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "easyocr>=1.7.2",
    "opencv-python>=4.11.0.86",
    "paddleocr>=2.10.0",
    "paddlepaddle>=2.6.2",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "psycopg2-binary>=2.9.10",
    "pytesseract>=0.3.13",
    "sqlalchemy>=2.0.39",
    "testcontainers>=4.9.2",
    "tqdm>=4.67.1",
]

[tool.uv]
override-dependencies = ["torch", "torchvision"]
index-strategy = "unsafe-first-match"

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
